<resources>
    <string name="app_name">Drowsy Driving</string>
    <string name="app_title_drowsy">Drowsy</string>
    <string name="app_title_driving">Driving</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_log_in">LOG IN</string>
    <string name="main_skip">Skip</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to navigation main activity -->
    <string name="title_activity_main2">Data</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Sarah</string>
    <string name="useremail">Sarah@gmail.com</string>


    <string name="main2_blinkRate_text_view">Blink Rate</string>
    <string name="main2_yawnRate_text_view">Yawn Rate</string>
    <string name="main2_blinkLength_title">Blink Length</string>
</resources>
